--- a/Project_Report.ipynb
+++ b/Project_Report.ipynb
@@ -68,16 +68,16 @@
     "\n",
     "#### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; What do we know already about TED popularity\n",
     "Why TED talks are popular? There could be many reasons contribute to its impact and influence. I have listed here a few reasons that are mostly agreed upon on the internet. \n",
-    "* TED Talks are free online.\n",
+    "* TED Talks are free to watch online.\n",
     "\n",
     "Ted Talks have been posted online for free for the past 10 years, anyone with internet access will be able to view Ted Talks and be inspired. The fact that they are free contribute to their wide reach and impact to people with even limited resources.\n",
-    "* TED Talks cover a diverse range of topics\n",
+    "* TED Talks cover a wide range of topics.\n",
     "\n",
     "TED started with topics restricted in technology, entertainment and design, what this name stands for. However, TED topics have been much expanded over the past 30 years. Nowadays, TED topics can be ranged from science, business, art to global issues. The speakers are from diverse backgrounds as well. Therefore, people with completely different interest and desires may still find their common destination to be inspired as of TED.  \n",
     "\n",
-    "* TED Talks are short and focused.\n",
+    "* TED Talks are short.\n",
     "\n",
-    "According to TED curator Chris Anderson who enforced an 18-minute maximum length, it was \"long enough to be serious and short enough to hold people's attention\". The strategy seems very effective since it fits human nature to focus for a short amount of time. My personal observation is that short talks are more effective because people can take advantage of their fragmented. time.\n",
+    "According to TED curator Chris Anderson who enforced an 18-minute maximum length, it was \"long enough to be serious and short enough to hold people's attention\". The strategy seems very effective since it fits human nature to focus for a short amount of time. My personal observation is that short talks are more effective because people can take advantage of their fragmented time.\n",
     "\n",
     "\n",
     "#### &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; What we don't know about TED popularity\n",
